<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF7F7F7"
    tools:context=".HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/news"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:translationZ="100dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="15dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toBottomOf="@id/newsCard"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="@id/newsCard"
        app:layout_constraintRight_toRightOf="@id/newsCard"
        app:layout_constraintTop_toBottomOf="@id/newsCard">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="NEW"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="40dp"
        android:autoSizeMinTextSize="10sp"
        android:padding="10sp"
        android:text="@string/sms_sherlar"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/likeBtn"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:translationZ="100dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="15dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toBottomOf="@id/likeCard"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="@id/likeCard"
        app:layout_constraintRight_toRightOf="@id/likeCard"
        app:layout_constraintTop_toBottomOf="@id/likeCard">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="LIKE"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/newsCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:outlineAmbientShadowColor="#FFF9C500"
        android:outlineSpotShadowColor="#FFF9C500"
        app:cardBackgroundColor="#FFF9C500"
        app:cardCornerRadius="15dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toTopOf="@id/card1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/likeCard"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        app:layout_constraintWidth_percent="0.4">

        <LinearLayout
            android:id="@+id/newsLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10sp"
            android:paddingTop="15dp"
            android:paddingRight="30sp"
            android:paddingBottom="35sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/icons8_layers_64px"
                    app:tint="#FFB99304" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/yangilar"
                    android:textColor="#FFB99304"
                    android:textSize="13sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/Count2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_122"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="5sp"
                    android:text="@string/ta"
                    android:textColor="#FFB99304"
                    android:textSize="17dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
    /*news card*/


    <androidx.cardview.widget.CardView
        android:id="@+id/likeCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:outlineAmbientShadowColor="#FFEB1656"
        android:outlineSpotShadowColor="#FFEB1656"
        app:cardBackgroundColor="#FFEB1656"
        app:cardCornerRadius="15dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toTopOf="@id/card2"
        app:layout_constraintLeft_toRightOf="@id/newsCard"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        app:layout_constraintWidth_percent="0.4">

        <LinearLayout
            android:id="@+id/favoriteLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10sp"
            android:paddingTop="15dp"
            android:paddingRight="10sp"
            android:paddingBottom="35sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/icons8_heart_32px"
                    app:tint="#FFFEA6B6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="Saqlanganlar"
                    android:textColor="#FFFEA6B6"
                    android:textSize="13sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/countFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="5"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="5sp"
                    android:text="@string/ta"
                    android:textColor="#FFFEA6B6"
                    android:textSize="17dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    /*like card*/


    <LinearLayout
        android:id="@+id/card1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/cardview_background"
        android:backgroundTint="#FFFBFBFB"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@id/card3"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/card2"
        app:layout_constraintTop_toBottomOf="@id/newsCard"
        app:layout_constraintWidth_percent="0.44">

        <LinearLayout
            android:id="@+id/card11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/img1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sevgi_sherlari"
                android:textColor="#FF6A6A6A" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/card2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/cardview_background"
        android:backgroundTint="#FFFBFBFB"
        app:layout_constraintBottom_toTopOf="@id/card4"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintLeft_toRightOf="@id/card1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/likeCard"
        app:layout_constraintWidth_percent="0.44">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/img2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/so_ginch_armon"
                android:textColor="#FF6A6A6A" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/card3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/cardview_background"
        android:backgroundTint="#FFFBFBFB"
        app:layout_constraintBottom_toTopOf="@id/card5"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/card4"
        app:layout_constraintTop_toBottomOf="@id/card1"
        app:layout_constraintWidth_percent="0.44">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/img3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabrik_sherlari"
                android:textColor="#FF6A6A6A" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/card4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/cardview_background"
        android:backgroundTint="#FFFBFBFB"
        app:layout_constraintBottom_toTopOf="@id/card6"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintLeft_toRightOf="@id/card3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card2"
        app:layout_constraintWidth_percent="0.44">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/img4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ota_ona_xaqida"
                android:textColor="#FF6A6A6A" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/card5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/cardview_background"
        android:backgroundTint="#FFFBFBFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/card6"
        app:layout_constraintTop_toBottomOf="@id/card3"
        app:layout_constraintWidth_percent="0.44">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/img5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_stlik_sherlari"
                android:textColor="#FF6A6A6A" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/card6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/cardview_background"
        android:backgroundTint="#FFFBFBFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintLeft_toRightOf="@id/card5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card4"
        app:layout_constraintWidth_percent="0.44">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/img6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hazil_sherlar"
                android:textColor="#FF6A6A6A" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>